MDEV-33218:  Assertion `active_arena->is_stmt_prepare_or_first_stmt_execute() || active_arena->state == Query_arena::STMT_SP_QUERY_ARGUMENTS' failed in st_select_lex::fix_prepare_information

In case there is a view that queried from a stored routine or a prepared
statement and this temporary table is dropped between executions of SP/PS,
then it leads to hitting assertion at the SELECT_LEX::fix_prepare_information.
The fired assertion was added by the commit 85f2e4f8e8c82978bd9cc0af9bfd2b549ea04d65
(MDEV-32466: Potential memory leak on executing of create view statement).
Failure of this assertion means memory leaking on execution of SP/PS.
Moreover, if the the added assert be commented out, different result sets
can be produced by the statement SELECT * FROM the hidden table.

Both hitting the assertion and different result sets have the same root cause.
This cause is usage of temporary table's metadata after the table itself
has been dropped. To fix the issue, reload the cache of stored routines.